--- a/Applications/App Market.app/Localizations/Chinese.lang
+++ b/Applications/App Market.app/Localizations/Chinese.lang
@@ -1,111 +1,111 @@
 {
-	statistics = "统计",
-	messages = "消息",
-	account = "账号",
-	settings = "设置",
-	newMessage = "新消息",
-	newMessagePersonal = "个人消息",
-	newMessageToDeveloper = "发送消息",
-	dialogWith = "与这个人对话中:",
-	send = "发送",
-	toWho = "给谁:",
-	typeMessageText = "输入消息",
-	typeUserName = "用户名",
-	yourText = "你:",
-	hereBeYourDialogs = "这是你们的谈话内容",
+	account = "帐户",
+	add = "添加",
+	addDependency = "添加依赖",
+	areYouSure = "您确定要删除出版物吗？",
+	asc = "上升",
+	averageRating = "平均评分",
+	byDate = "按日期",
+	byName = "按名字",
+	byPopularity = "按人气",
+	byRating = "按评级",
+	cancel = "取消",
+	category = "类别",
+	categoryApplications = "应用",
+	categoryLibraries = "图书馆",
 
-	categoryOverview = "预览",
-	categoryApplications = "软件",
-	categoryLibraries = "库",
+	categoryOverview = "概述",
 	categoryScripts = "脚本",
 	categoryUpdates = "更新",
+	changePassword = "更改密码",
+	changeReview = "变更审查",
 
-	statisticsNewUser = "新用户",
-	statisticsMostPopularUser = "最积极",
-	statisticsUsersCount = "用户数量",
-	statisticsPublicationsCount = "软件数量",
-	statisticsReviewsCount = "评论数量",
-	statisticsPopularPublication = "最受欢迎的软件",
-	statisticsMessagesCount = "信息数",
-
-	whatsNew = "What's new",
-	whatsNewInVersion = "What's new in version",
-	areYouSure = "Are your sure want to delete publication?",
-	createShortcut = "Create desktop shortcut",
-	editing = "Edit publication",
-	publicationName = "Publication name",
-	mainFileURL = "Main file URL",
-	mainFileName = "Main file name",
-	iconURL = "Icon URL",
-	description = "简介",
-	dependenciesAndResources = "依赖和资源",
-	save = "保存",
-	cancel = "取消",
-	fileName = "文件名称",
-	download = "下载",
-	downloading = "下载中",
-	tree = "要下载的文件",
-	addDependency = "Add dependency",
-	existingPublication = "Existing publication",
-	fileByURL = "File via URL",
-	add = "添加",
-	relativePath = "Relative path",
-	localizationDependency = "本地化文件",
-	
-	login = "登录",
-	profile = "账户",
-	nickname = "昵称",
-	password = "密码",
-	nicknameOrEmail = "邮箱或昵称",
-	registrationDate = "注册日期",
-	edit = "Edit publication",
-	remove = "Delete publication",
-	open = "打开",
+	choosePath = "选择路径",
 	clearCache = "清除缓存",
-	exit = "注销",
-	changePassword = "修改密码",
-	newPassword = "新密码",
-	singleSession = "这不是我的电脑！",
-	currentPassword = "目前的密码",
-	language = "简介语言",
-	publications = "Publications",
-	notRegistered = "还没注册？",
-	createAccount = "注册",
-	registrationSuccessfull = "请去检查邮箱，并点击发来的链接",
+	createAccount = "创建帐号",
+	createShortcut = "创建桌面快捷方式",
+	currentPassword = "当前密码",
+	dependencies = "依赖项",
+	dependenciesAndResources = "依赖项和资源",
 
-	search = "搜索",
-	byPopularity = "最受欢迎",
-	byRating = "最高评分",
-	byDate = "创建日期",
-	byName = "通过名称",
-	desc = "Descending",
-	asc = "Ascending",
-	publish = "Publish software",
+	desc = "降序",
+	description = "描述",
+	developer = "开发商",
+	dialogWith = "对话",
+	download = "下载",
+	downloading = "下载",
+	edit = "编辑出版物",
+	editing = "编辑出版物",
+	existingPublication = "现有出版物",
+	exit = "登出",
+	fileByURL = "通过 URL 归档",
+	fileName = "文件名",
+	hereBeYourDialogs = "这里将是你的对话",
+	iconURL = "图标网址",
 	install = "安装",
 	installed = "已安装",
-	update = "更新",
-	page = "页",
-	updateAll = "更新所有",
-	noUpdates = "已经是最新版",
+	language = "描述语言",
+	license = "执照",
+	localizationDependency = "本地化文件",
+	login = "登录",
+	mainFileName = "主文件名",
+	mainFileURL = "主文件网址",
+	messages = "留言",
 
-	changeReview = "修改评论",
-	developer = "开发者",
-	version = "版本",
-	license = "协议",
-	category = "类型",
-	updated = "已更新",
+	newMessage = "新消息",
+	newMessagePersonal = "个人留言",
+	newMessageToDeveloper = "发信息",
+	newPassword = "新密码",
+	nickname = "昵称",
+	nicknameOrEmail = "电子邮件或昵称",
+	no = "不",
+	noUpdates = "您没有更新",
+	notRegistered = "还没注册？",
+	of = "的",
+	open = "打开",
+	page = "页",
+	password = "密码",
+	profile = "轮廓",
+	publicationName = "出版物名称",
+	publications = "出版物",
+	publish = "发布软件",
+	registrationDate = "注册日期",
+	registrationSuccessfull = "检查您的电子邮件和垃圾邮件文件夹以验证您的帐户",
+	relativePath = "相对路径",
+
+	remove = "删除出版物",
 	reviews = "评论",
-	yourRating = "你的评分",
-	writeReviewHere = "在这里写评论",
-	choosePath = "选择目录",
-	reviewsOfUsers = "Users reviews",
-	averageRating = "综合评分",
+	reviewsOfUsers = "用户评论",
+	save = "节省",
+	search = "搜索",
+	send = "发送",
+	settings = "设置",
+	singleSession = "这不是我的电脑",
+	statistics = "统计数据",
+	statisticsMessagesCount = "消息计数",
+	statisticsMostPopularUser = "最活跃的",
+	statisticsNewUser = "新的用户",
+	statisticsPopularPublication = "（流行刊物）",
+	statisticsPublicationsCount = "出版物数量",
+
+	statisticsReviewsCount = "评论数",
+	statisticsUsersCount = "用户数",
+	thanksForVote = "感谢您的意见。",
+	toWho = "给谁：",
+	tree = "下载文件树",
+	typeMessageText = "键入消息文本",
+	typeUserName = "输入用户名",
+	update = "更新",
+	updateAll = "全部更新",
+	updated = "更新",
+	usersLoveReview = "用户发现此评论有帮助",
+	version = "版本",
+	wasReviewHelpful = "此评论对您有用吗？",
+	whatsNew = "什么是新的",
+	whatsNewInVersion = "版本的新功能",
 	writeReview = "创建评论",
-	dependencies = "依赖",
-	wasReviewHelpful = "这条评论有用吗？",
-	yes = "有",
-	no = "没有",
-	of = "/",
-	usersLoveReview = "人认为这条评论有用",
-	thanksForVote = "感谢你的观点。",
+	writeReviewHere = "在此处输入评论文本",
+	yes = "是的",
+	yourRating = "你的评分",
+	yourText = "你：",
 }
