--- a/Applications/App Market.app/Localizations/Dutch.lang
+++ b/Applications/App Market.app/Localizations/Dutch.lang
@@ -1,111 +1,111 @@
 {
-	statistics = "Statistieken",
-	messages = "Berichten",
-	account = "Account",
-	settings = "Instellingen",
-	newMessage = "Nieuw bericht",
-	newMessagePersonal = "Persoonlijk bericht",
-	newMessageToDeveloper = "Verzend bericht",
-	dialogWith = "Gesprek met ",
-	send = "Verzend",
-	toWho = "Aan wie:",
-	typeMessageText = "Schrijf hier uw bericht",
-	typeUserName = "Schrijf gebruikersnaam",
-	yourText = "Jij:",
-	hereBeYourDialogs = "Hier zullen uw gesprekken zijn",
+	account = "Rekening",
+	add = "Toevoegen",
+	addDependency = "Afhankelijkheid toevoegen",
+	areYouSure = "Weet u zeker dat u de publicatie wilt verwijderen?",
+	asc = "Oplopend",
+	averageRating = "Gemiddelde score",
+	byDate = "Op datum",
+	byName = "Bij naam",
+	byPopularity = "op populariteit",
+	byRating = "Op beoordeling",
+	cancel = "Annuleren",
+	category = "Categorie",
+	categoryApplications = "Toepassingen",
+	categoryLibraries = "bibliotheken",
 
 	categoryOverview = "Overzicht",
-	categoryApplications = "Applicaties",
-	categoryLibraries = "Bibliotheken",
 	categoryScripts = "Scripts",
 	categoryUpdates = "Updates",
+	changePassword = "Wachtwoord wijzigen",
+	changeReview = "Beoordeling wijzigen",
 
-	statisticsNewUser = "Nieuwe gebruiker",
-	statisticsMostPopularUser = "Meest actief",
-	statisticsUsersCount = "Aantal gebruikers",
-	statisticsPublicationsCount = "Aantal Publicaties",
-	statisticsReviewsCount = "Aantal beoordelingen",
-	statisticsPopularPublication = "(populaire publicatie)",
-	statisticsMessagesCount = "Aantal berichten",
-
-	whatsNew = "Wat is er nieuw",
-	whatsNewInVersion = "Wat is er nieuw in de versie",
-	areYouSure = "Weet je zeker dat je de publicatie wilt verwijderen?",
-	createShortcut = "Maak snelkoppeling op het bureaublad",
-	editing = "Bewerk publicatie",
-	publicationName = "Publicatie naam",
-	mainFileURL = "URL van hoofdbestand",
-	mainFileName = "Naam van hoofdbestand",
-	iconURL = "Pictogram URL",
-	description = "Beschrijving",
-	dependenciesAndResources = "Afhankelijkheden en middelen",
-	save = "Opslaan",
-	cancel = "Annuleer",
-	fileName = "Bestandsnaam",
-	download = "Download",
-	downloading = "Bezig met downloaden",
-	tree = "Lijst van de bestanden die gedownload worden",
-	addDependency = "Voeg afhankelijkheid toe",
-	existingPublication = "Publicatie bestaat al",
-	fileByURL = "Bestand via URL",
-	add = "Voeg toe",
-	relativePath = "Relatief pad",
-	localizationDependency = "Lokalisatiebestand",
-	
-	login = "Log in",
-	profile = "Profiel",
-	nickname = "naam",
-	password = "Wachtwoord",
-	nicknameOrEmail = "E-Mail of naam",
-	registrationDate = "Registreer datum",
-	edit = "Bewerk publicatie",
-	remove = "Verwijder publicatie",
-	open = "Open",
-	clearCache = "Verwijder cache",
-	exit = "Log uit",
-	changePassword = "Verander wachtwoord",
-	newPassword = "Nieuw wachtwoord",
-	singleSession = "Dit is niet mijn computer",
-	currentPassword = "Huidig wachtwoord",
-	language = "Beschrijvingstaal",
-	publications = "Publicaties",
-	notRegistered = "Nog niet geregistreerd?",
-	createAccount = "Maak account",
-	registrationSuccessfull = "Bevestig uw account via de link in de e-mail (controleer uw spam map)",
-
-	search = "Zoeken",
-	byPopularity = "Op populariteit",
-	byRating = "Op beoordeling",
-	byDate = "Op datum",
-	byName = "Op naam",
-	desc = "Aflopend",
-	asc = "Oplopend",
-	publish = "Publiseer software",
-	install = "Installeer",
-	installed = "Geïnstalleerd",
-	update = "Update",
-	page = "Pagina",
-	updateAll = "Update alles",
-	noUpdates = "Je hebt momenteel geen updates",
-
-	changeReview = "Verander beoordeling",
-	developer = "Ontwikkelaar",
-	version = "Versie",
-	license = "Licentie",
-	category = "Categorie",
-	updated = "Geüpdated",
-	reviews = "Beoordelingen",
-	yourRating = "Jou Beoordelingen",
-	writeReviewHere = "Schrijf uw beoordeling hier",
 	choosePath = "Kies pad",
-	reviewsOfUsers = "Gebruiker beoordelingen",
-	averageRating = "Gemiddelde score",
-	writeReview = "Schrijf beoordeling",
-	dependencies = "Afhankelijkheden",
-	wasReviewHelpful = "Was deze beoordeling behulpzaam?",
-	yes = "Ja",
+	clearCache = "Cache wissen",
+	createAccount = "Account aanmaken",
+	createShortcut = "Snelkoppeling op het bureaublad maken",
+	currentPassword = "Huidig ​​wachtwoord",
+	dependencies = "afhankelijkheden",
+	dependenciesAndResources = "Afhankelijkheden en bronnen",
+
+	desc = "Aflopend",
+	description = "Beschrijving",
+	developer = "Ontwikkelaar",
+	dialogWith = "Gesprek met",
+	download = "Downloaden",
+	downloading = "downloaden",
+	edit = "Publicatie bewerken",
+	editing = "Publicatie bewerken",
+	existingPublication = "Bestaande publicatie",
+	exit = "Uitloggen",
+	fileByURL = "Bestand via URL",
+	fileName = "Bestandsnaam",
+	hereBeYourDialogs = "Hier zullen je gesprekken zijn",
+	iconURL = "Icoon-URL",
+	install = "Installeren",
+	installed = "Geïnstalleerd",
+	language = "Beschrijvingen taal",
+	license = "Vergunning",
+	localizationDependency = "Lokalisatiebestand",
+	login = "Log in",
+	mainFileName = "Naam hoofdbestand",
+	mainFileURL = "URL hoofdbestand",
+	messages = "Berichten",
+
+	newMessage = "Nieuw bericht",
+	newMessagePersonal = "Persoonlijk bericht",
+	newMessageToDeveloper = "Bericht versturen",
+	newPassword = "Nieuw paswoord",
+	nickname = "Bijnaam",
+	nicknameOrEmail = "E-mail of bijnaam",
 	no = "Nee",
+	noUpdates = "Je hebt geen updates",
+	notRegistered = "nog niet geregistreerd?",
 	of = "van",
-	usersLoveReview = "Gebruikers vonden deze beoordeling behulpzaam",
-	thanksForVote = "Bedankt voor uw mening.",
+	open = "Open",
+	page = "Bladzijde",
+	password = "Wachtwoord",
+	profile = "Profiel",
+	publicationName = "publicatie naam",
+	publications = "publicaties",
+	publish = "Software publiceren",
+	registrationDate = "Inschrijfdatum",
+	registrationSuccessfull = "Controleer uw e-mail en spammap om uw account te verifiëren",
+	relativePath = "Relatief pad",
+
+	remove = "Publicatie verwijderen",
+	reviews = "Beoordelingen",
+	reviewsOfUsers = "Gebruikersrecensies",
+	save = "Opslaan",
+	search = "Zoekopdracht",
+	send = "Versturen",
+	settings = "Instellingen",
+	singleSession = "Het is niet mijn computer",
+	statistics = "Statistieken",
+	statisticsMessagesCount = "Berichten tellen",
+	statisticsMostPopularUser = "Meest actief",
+	statisticsNewUser = "Nieuwe gebruiker",
+	statisticsPopularPublication = "(populaire publicatie)",
+	statisticsPublicationsCount = "Publicaties tellen mee",
+
+	statisticsReviewsCount = "Beoordelingen tellen",
+	statisticsUsersCount = "Gebruikers tellen",
+	thanksForVote = "Bedankt voor je mening.",
+	toWho = "Aan wie:",
+	tree = "Boom van het downloaden van bestanden",
+	typeMessageText = "Typ berichttekst",
+	typeUserName = "Typ gebruikersnaam",
+	update = "Bijwerken",
+	updateAll = "Update alles",
+	updated = "Bijgewerkt",
+	usersLoveReview = "gebruikers vonden deze recensie nuttig",
+	version = "Versie",
+	wasReviewHelpful = "Was dit een nuttige beoordeling?",
+	whatsNew = "Wat is er nieuw",
+	whatsNewInVersion = "Wat is er nieuw in versie",
+	writeReview = "Maak een recensie",
+	writeReviewHere = "Typ hier de recensietekst",
+	yes = "Ja",
+	yourRating = "Uw beoordeling",
+	yourText = "Jij:",
 }
