--- a/Applications/App Market.app/Localizations/French.lang
+++ b/Applications/App Market.app/Localizations/French.lang
@@ -1,111 +1,111 @@
 {
-	statistics = "Statistiques",
-	messages = "Messages",
 	account = "Compte",
-	settings = "Paramètres",
+	add = "Ajouter",
+	addDependency = "Ajouter une dépendance",
+	areYouSure = "Voulez-vous vraiment supprimer la publication ?",
+	asc = "Ascendant",
+	averageRating = "Note moyenne",
+	byDate = "Par date",
+	byName = "De nom",
+	byPopularity = "Par popularité",
+	byRating = "Par note",
+	cancel = "Annuler",
+	category = "Catégorie",
+	categoryApplications = "Applications",
+	categoryLibraries = "Bibliothèques",
+
+	categoryOverview = "Aperçu",
+	categoryScripts = "Scénarios",
+	categoryUpdates = "Mises à jour",
+	changePassword = "Changer le mot de passe",
+	changeReview = "Examen des modifications",
+
+	choosePath = "Choisissez le chemin",
+	clearCache = "Vider le cache",
+	createAccount = "Créer un compte",
+	createShortcut = "Créer un raccourci sur le bureau",
+	currentPassword = "Mot de passe actuel",
+	dependencies = "Dépendances",
+	dependenciesAndResources = "Dépendances et ressources",
+
+	desc = "Descendant",
+	description = "La description",
+	developer = "Développeur",
+	dialogWith = "Conversation avec",
+	download = "Télécharger",
+	downloading = "Téléchargement",
+	edit = "Modifier la publication",
+	editing = "Modifier la publication",
+	existingPublication = "Publication existante",
+	exit = "Se déconnecter",
+	fileByURL = "Fichier via URL",
+	fileName = "Nom de fichier",
+	hereBeYourDialogs = "Voici vos conversations",
+	iconURL = "URL de l'icône",
+	install = "Installer",
+	installed = "installée",
+	language = "Langue des descriptions",
+	license = "Licence",
+	localizationDependency = "Fichier de localisation",
+	login = "Connexion",
+	mainFileName = "Nom du fichier principal",
+	mainFileURL = "URL du fichier principal",
+	messages = "messages",
+
 	newMessage = "Nouveau message",
 	newMessagePersonal = "Message personnel",
 	newMessageToDeveloper = "Envoyer le message",
-	dialogWith = "Conversation avec ",
+	newPassword = "Nouveau mot de passe",
+	nickname = "Surnom",
+	nicknameOrEmail = "E-mail ou pseudo",
+	no = "Non",
+	noUpdates = "Vous n'avez aucune mise à jour",
+	notRegistered = "Pas encore inscrit?",
+	of = "de",
+	open = "Ouvrir",
+	page = "Page",
+	password = "Mot de passe",
+	profile = "Profil",
+	publicationName = "Nom de publication",
+	publications = "Ouvrages",
+	publish = "Publier un logiciel",
+	registrationDate = "Date d'inscription",
+	registrationSuccessfull = "Vérifiez votre dossier de courrier électronique et de courrier indésirable pour vérifier votre compte",
+	relativePath = "Chemin relatif",
+
+	remove = "Supprimer la publication",
+	reviews = "Commentaires",
+	reviewsOfUsers = "Avis des utilisateurs",
+	save = "Sauver",
+	search = "Recherche",
 	send = "Envoyer",
-	toWho = "À qui :",
-	typeMessageText = "Tapez le message",
-	typeUserName = "Tapez le nom d'utilisateur",
-	yourText = "Vous :",
-	hereBeYourDialogs = "Voici vos conversations",
-
-	categoryOverview = "Aperçu",
-	categoryApplications = "Applications",
-	categoryLibraries = "API",
-	categoryScripts = "Scripts",
-	categoryUpdates = "Mises à jour",
-
+	settings = "Réglages",
+	singleSession = "Ce n'est pas mon ordinateur",
+	statistics = "Statistiques",
+	statisticsMessagesCount = "Les messages comptent",
+	statisticsMostPopularUser = "Les plus actifs",
 	statisticsNewUser = "Nouvel utilisateur",
-	statisticsMostPopularUser = "Plus actif",
-	statisticsUsersCount = "Nombre d'utilisateurs",
-	statisticsPublicationsCount = "Nombre de publications",
-	statisticsReviewsCount = "Nombre de commentaires",
 	statisticsPopularPublication = "(publication populaire)",
-	statisticsMessagesCount = "Nombre de messages",
+	statisticsPublicationsCount = "Nombre de publications",
 
+	statisticsReviewsCount = "Les avis comptent",
+	statisticsUsersCount = "Nombre d'utilisateurs",
+	thanksForVote = "Merci pour votre avis.",
+	toWho = "À qui:",
+	tree = "Arbre de téléchargement de fichiers",
+	typeMessageText = "Tapez le texte du message",
+	typeUserName = "Tapez le nom d'utilisateur",
+	update = "Mise à jour",
+	updateAll = "Tout mettre à jour",
+	updated = "Mis à jour",
+	usersLoveReview = "les utilisateurs ont trouvé cet avis utile",
+	version = "Version",
+	wasReviewHelpful = "Cet avis vous a-t-il été utile ?",
 	whatsNew = "Quoi de neuf",
 	whatsNewInVersion = "Quoi de neuf dans la version",
-	areYouSure = "Êtes-vous sûr de vouloir supprimer la publication ?",
-	createShortcut = "Créer un raccourci sur le bureau",
-	editing = "Modifier la publication",
-	publicationName = "Nom de la publication",
-	mainFileURL = "URL du fichier principal",
-	mainFileName = "Nom du fichier principal",
-	iconURL = "URL de l'icône",
-	description = "Description",
-	dependenciesAndResources = "Dépendances et ressources",
-	save = "Enregistrer",
-	cancel = "Annuler",
-	fileName = "Nom du fichier",
-	download = "Télécharger",
-	downloading = "Téléchargement",
-	tree = "Arborescence de téléchargement de fichiers",
-	addDependency = "Ajouter une dépendance",
-	existingPublication = "Publication existante",
-	fileByURL = "Fichier par URL",
-	add = "Ajouter",
-	relativePath = "Chemin relatif",
-	localizationDependency = "Fichier de localisation",
-	
-	login = "S'identifier",
-	profile = "Profil",
-	nickname = "Pseudo",
-	password = "Mot de passe",
-	nicknameOrEmail = "E-Mail ou pseudo",
-	registrationDate = "Date d'inscription",
-	edit = "Modifier la publication",
-	remove = "Supprimer la publication",
-	open = "Ouvrir",
-	clearCache = "Vider le cache",
-	exit = "Se déconnecter",
-	changePassword = "Changer le mot de passe",
-	newPassword = "Nouveau mot de passe",
-	singleSession = "Enregister le mot de passe",
-	currentPassword = "Mot de passe actuel",
-	language = "Langue de la description",
-	publications = "Publications",
-	notRegistered = "Pas encore inscrit ?",
-	createAccount = "Créer un compte",
-	registrationSuccessfull = "Vérifiez votre boite mail et le dossier de courrier indésirable pour valider votre compte",
-
-	search = "Rechercher",
-	byPopularity = "Par popularité",
-	byRating = "Par notation",
-	byDate = "Par date",
-	byName = "Par nom",
-	desc = "Décroissant",
-	asc = "Croissant",
-	publish = "Publier le logiciel",
-	install = "Installer",
-	installed = "Installée",
-	update = "Mettre à jour",
-	page = "Page",
-	updateAll = "Tout mettre à jour",
-	noUpdates = "Aucune mises à jour n'est disponible",
-
-	changeReview = "Changer de critique",
-	developer = "Développeur",
-	version = "Version",
-	license = "Licence",
-	category = "Catégorie",
-	updated = "Mis à jour",
-	reviews = "Commentaires",
-	yourRating = "Votre note",
-	writeReviewHere = "Tapez un commentaire ici",
-	choosePath = "Choisissez le chemin",
-	reviewsOfUsers = "Avis des utilisateurs",
-	averageRating = "Note globale",
-	writeReview = "Laisser un avis",
-	dependencies = "Dépendances",
-	wasReviewHelpful = "Avez-vous trouvé cet avis utile ?",
+	writeReview = "Créer un avis",
+	writeReviewHere = "Tapez le texte de l'avis ici",
 	yes = "Oui",
-	no = "Non",
-	of = "sur",
-	usersLoveReview = "utilisateurs ont trouvé cet avis utile",
-	thanksForVote = "Merci pour votre avis.",
+	yourRating = "Votre note",
+	yourText = "Tu:",
 }
