--- a/Applications/App Market.app/Localizations/German.lang
+++ b/Applications/App Market.app/Localizations/German.lang
@@ -1,111 +1,111 @@
 {
-	statistics = "Statistik",
-	messages = "Mails",
 	account = "Konto",
-	settings = "Einstellung",
+	add = "Hinzufügen",
+	addDependency = "Abhängigkeit hinzufügen",
+	areYouSure = "Möchten Sie die Veröffentlichung wirklich löschen?",
+	asc = "Aufsteigend",
+	averageRating = "Durchschnittliche Bewertung",
+	byDate = "Nach Datum",
+	byName = "Namentlich",
+	byPopularity = "Nach Popularität",
+	byRating = "Nach Bewertung",
+	cancel = "Absagen",
+	category = "Kategorie",
+	categoryApplications = "Anwendungen",
+	categoryLibraries = "Bibliotheken",
+
+	categoryOverview = "Überblick",
+	categoryScripts = "Skripte",
+	categoryUpdates = "Aktualisierung",
+	changePassword = "Ändere das Passwort",
+	changeReview = "Bewertung ändern",
+
+	choosePath = "Pfad wählen",
+	clearCache = "Cache leeren",
+	createAccount = "Benutzerkonto anlegen",
+	createShortcut = "Desktopverknüpfung erstellen",
+	currentPassword = "Aktuelles Passwort",
+	dependencies = "Abhängigkeiten",
+	dependenciesAndResources = "Abhängigkeiten und Ressourcen",
+
+	desc = "Absteigend",
+	description = "Beschreibung",
+	developer = "Entwickler",
+	dialogWith = "Gespräch mit",
+	download = "Download",
+	downloading = "wird heruntergeladen",
+	edit = "Publikation bearbeiten",
+	editing = "Publikation bearbeiten",
+	existingPublication = "Vorhandene Veröffentlichung",
+	exit = "Ausloggen",
+	fileByURL = "Datei über URL",
+	fileName = "Dateinamen",
+	hereBeYourDialogs = "Hier werden Ihre Gespräche geführt",
+	iconURL = "Symbol-URL",
+	install = "Installieren",
+	installed = "Eingerichtet",
+	language = "Beschreibungssprache",
+	license = "Lizenz",
+	localizationDependency = "Lokalisierungsdatei",
+	login = "Einloggen",
+	mainFileName = "Hauptdateiname",
+	mainFileURL = "Hauptdatei-URL",
+	messages = "Mitteilungen",
+
 	newMessage = "Neue Nachricht",
 	newMessagePersonal = "Persönliche Nachricht",
 	newMessageToDeveloper = "Nachricht senden",
-	dialogWith = "Gespräch mit ",
-	send = "Senden",
-	toWho = "Zu wem:",
-	typeMessageText = "Typ Nachrichtentext",
-	typeUserName = "Typ Benutzername",
-	yourText = "Sie:",
-	hereBeYourDialogs = "Hier werden Ihre Gespräche",
-
-	categoryOverview = "Überblick",
-	categoryApplications = "Applications",
-	categoryLibraries = "Bibliothek",
-	categoryScripts = "Skript",
-	categoryUpdates = "Aktualisierung",
-
-	statisticsNewUser = "Neuer Benutzer",
-	statisticsMostPopularUser = "Aktivsten",
-	statisticsUsersCount = "Anzahl der Benutzer",
-	statisticsPublicationsCount = "Publikationen zählen",
-	statisticsReviewsCount = "Bewertungen zählen",
-	statisticsPopularPublication = "(beliebte Publikation)",
-	statisticsMessagesCount = "Nachrichten zählen",
-
-	whatsNew = "Was gibt ' s neues",
-	whatsNewInVersion = "Was in der version neu ist",
-	areYouSure = "Möchten Sie die Veröffentlichung wirklich löschen?",
-	createShortcut = "Desktop-Verknüpfung erstellen",
-	editing = "Publikation Bearbeiten",
-	publicationName = "Name der Veröffentlichung",
-	mainFileURL = "URL der Hauptdatei",
-	mainFileName = "Name der Hauptdatei",
-	iconURL = "Symbol-URL",
-	description = "Beschreibung",
-	dependenciesAndResources = "Abhängigkeiten und Ressourcen",
-	save = "Speichern",
-	cancel = "Stornieren",
-	fileName = "Dateinamen",
-	download = "Herunterladen",
-	downloading = "Downloading",
-	tree = "Baum des Herunterladens von Dateien",
-	addDependency = "Abhängigkeit hinzufügen",
-	existingPublication = "Bestehende Publikation",
-	fileByURL = "Datei über URL",
-	add = "Hinzufügen",
-	relativePath = "Relativer Pfad",
-	localizationDependency = "Lokalisierungsdatei",
-	
-	login = "Anmelden",
-	profile = "Profil",
+	newPassword = "Neues Kennwort",
 	nickname = "Spitzname",
-	password = "Passwort",
 	nicknameOrEmail = "E-Mail oder Spitzname",
-	registrationDate = "Datum der Registrierung",
-	edit = "Publikation Bearbeiten",
-	remove = "Publikation löschen",
-	open = "Öffnen",
-	clearCache = "Cache leeren",
-	exit = "Abmelden",
-	changePassword = "Passwort ändern",
-	newPassword = "Neues Passwort",
-	singleSession = "Es ist nicht mein computer",
-	currentPassword = "Aktuelles Passwort",
-	language = "Beschreibungen Sprache",
-	publications = "Publications",
+	no = "Nein",
+	noUpdates = "Sie haben keine Aktualisierungen",
 	notRegistered = "Noch nicht registriert?",
-	createAccount = "Konto erstellen",
-	registrationSuccessfull = "Überprüfen Sie Ihren E-mail-und spam-Ordner, um Ihr Konto zu überprüfen",
-
-	search = "Suche",
-	byPopularity = "Nach Beliebtheit",
-	byRating = "Nach Bewertung",
-	byDate = "Nach Datum",
-	byName = "Namentlich",
-	desc = "Absteigend",
-	asc = "Aufsteigend",
-	publish = "Software veröffentlichen",
-	install = "Installieren",
-	installed = "Installiert",
-	update = "Update",
-	page = "Seite",
-	updateAll = "Alle aktualisieren",
-	noUpdates = "Sie haben keine updates",
-
-	changeReview = "Überprüfung ändern",
-	developer = "Entwickler",
-	version = "Version",
-	license = "Lizenz",
-	category = "Zimmerkategorie",
-	updated = "Aktualisiert",
-	reviews = "Gästebewertungen",
-	yourRating = "Ihre Bewertung",
-	writeReviewHere = "Art review text hier",
-	choosePath = "Pfad auswählen",
-	reviewsOfUsers = "Benutzerbewertungen",
-	averageRating = "Durchschnittliche Bewertung",
-	writeReview = "Review erstellen",
-	dependencies = "Abhängigkeit",
-	wasReviewHelpful = "War diese Bewertung hilfreich?",
-	yes = "Ja",
-	no = "Kein",
 	of = "von",
-	usersLoveReview = "Benutzer fanden diese Bewertung hilfreich",
-	thanksForVote = "Vielen Dank für Ihre Meinung.",
+	open = "Offen",
+	page = "Buchseite",
+	password = "Passwort",
+	profile = "Profil",
+	publicationName = "Name der Veröffentlichung",
+	publications = "Veröffentlichungen",
+	publish = "Software veröffentlichen",
+	registrationDate = "Registrierungsdatum",
+	registrationSuccessfull = "Überprüfen Sie Ihren E-Mail- und Spam-Ordner, um Ihr Konto zu bestätigen",
+	relativePath = "Relativer Pfad",
+
+	remove = "Veröffentlichung löschen",
+	reviews = "Bewertungen",
+	reviewsOfUsers = "Benutzerbewertungen",
+	save = "Speichern",
+	search = "Suche",
+	send = "Schicken",
+	settings = "Einstellungen",
+	singleSession = "Es ist nicht mein Computer",
+	statistics = "Statistiken",
+	statisticsMessagesCount = "Nachrichten zählen",
+	statisticsMostPopularUser = "Am aktivsten",
+	statisticsNewUser = "Neuer Benutzer",
+	statisticsPopularPublication = "(beliebte Veröffentlichung)",
+	statisticsPublicationsCount = "Veröffentlichungen zählen",
+
+	statisticsReviewsCount = "Bewertungen zählen",
+	statisticsUsersCount = "Benutzer zählen",
+	thanksForVote = "Danke für deine Meinung.",
+	toWho = "Zu wem:",
+	tree = "Baum zum Herunterladen von Dateien",
+	typeMessageText = "Geben Sie den Nachrichtentext ein",
+	typeUserName = "Geben Sie den Benutzernamen ein",
+	update = "Aktualisieren",
+	updateAll = "Alle aktualisieren",
+	updated = "Aktualisiert",
+	usersLoveReview = "Benutzer fanden diese Rezension hilfreich",
+	version = "Ausführung",
+	wasReviewHelpful = "War diese Kritik hilfreich?",
+	whatsNew = "Was gibt's Neues",
+	whatsNewInVersion = "Was ist neu in der Version",
+	writeReview = "Bewertung erstellen",
+	writeReviewHere = "Geben Sie hier den Bewertungstext ein",
+	yes = "Ja",
+	yourRating = "Deine Bewertung",
+	yourText = "Du:",
 }
