--- a/Applications/App Market.app/Localizations/Italian.lang
+++ b/Applications/App Market.app/Localizations/Italian.lang
@@ -1,111 +1,111 @@
 {
-	statistics = "Statistica",
-	messages = "Messaggio",
-	account = "Conto",
-	settings = "Impostazioni",
+	account = "Account",
+	add = "Aggiungere",
+	addDependency = "Aggiungi dipendenza",
+	areYouSure = "Sei sicuro di voler eliminare la pubblicazione?",
+	asc = "Ascendente",
+	averageRating = "Voto medio",
+	byDate = "Per data",
+	byName = "Per nome",
+	byPopularity = "Per popolarità",
+	byRating = "Per valutazione",
+	cancel = "Annulla",
+	category = "Categoria",
+	categoryApplications = "Applicazioni",
+	categoryLibraries = "Biblioteche",
+
+	categoryOverview = "Panoramica",
+	categoryScripts = "Script",
+	categoryUpdates = "Aggiornamenti",
+	changePassword = "Cambia la password",
+	changeReview = "Modifica recensione",
+
+	choosePath = "Scegli il percorso",
+	clearCache = "Svuota la cache",
+	createAccount = "Creare un account",
+	createShortcut = "Crea una scorciatoia sul desktop",
+	currentPassword = "Password attuale",
+	dependencies = "Dipendenze",
+	dependenciesAndResources = "Dipendenze e risorse",
+
+	desc = "Discendente",
+	description = "Descrizione",
+	developer = "Sviluppatore",
+	dialogWith = "Conversazione con",
+	download = "Scarica",
+	downloading = "Download",
+	edit = "Modifica pubblicazione",
+	editing = "Modifica pubblicazione",
+	existingPublication = "Pubblicazione esistente",
+	exit = "Disconnettersi",
+	fileByURL = "File tramite URL",
+	fileName = "Nome del file",
+	hereBeYourDialogs = "Ecco le tue conversazioni",
+	iconURL = "URL icona",
+	install = "Installare",
+	installed = "Installato",
+	language = "Linguaggio delle descrizioni",
+	license = "Licenza",
+	localizationDependency = "File di localizzazione",
+	login = "Accesso",
+	mainFileName = "Nome del file principale",
+	mainFileURL = "URL del file principale",
+	messages = "Messaggi",
+
 	newMessage = "Nuovo messaggio",
 	newMessagePersonal = "Messaggio personale",
 	newMessageToDeveloper = "Invia messaggio",
-	dialogWith = "Conversazione con ",
-	send = "Inviare",
-	toWho = "A chi:",
-	typeMessageText = "Tipo Testo messaggio",
-	typeUserName = "Tipo Nome Utente",
-	yourText = "Si:",
-	hereBeYourDialogs = "Ecco le vostre conversazioni",
-
-	categoryOverview = "Panoramica",
-	categoryApplications = "Applicazione",
-	categoryLibraries = "Biblioteca",
-	categoryScripts = "Script",
-	categoryUpdates = "Aggiornare",
-
-	statisticsNewUser = "Nuovo utente",
-	statisticsMostPopularUser = "Più attivo",
-	statisticsUsersCount = "Gli utenti contano",
-	statisticsPublicationsCount = "Conta delle pubblicazioni",
-	statisticsReviewsCount = "Conta recensioni",
-	statisticsPopularPublication = "(pubblicazione popolare)",
-	statisticsMessagesCount = "Conta messaggi",
-
-	whatsNew = "Cosa c'è di nuovo",
-	whatsNewInVersion = "Cosa c'è di nuovo in versione",
-	areYouSure = "Eliminare veramente la pubblicazione?",
-	createShortcut = "Crea scorciatoia da scrivania",
-	editing = "Modifica pubblicazione",
-	publicationName = "Nome della pubblicazione",
-	mainFileURL = "URL del file principale",
-	mainFileName = "Nome file principale",
-	iconURL = "URL icona",
-	description = "Descrizione",
-	dependenciesAndResources = "Dipendenze e risorse",
-	save = "Salvare",
-	cancel = "Annullare",
-	fileName = "Nome File",
-	download = "Scaricare",
-	downloading = "Scaricare",
-	tree = "Albero dei file scaricati",
-	addDependency = "Aggiungi dipendenza",
-	existingPublication = "Pubblicazione esistente",
-	fileByURL = "File tramite URL",
-	add = "Aggiungere",
-	relativePath = "Percorso relativo",
-	localizationDependency = "File di localizzazione",
-	
-	login = "Login",
-	profile = "Profilo",
-	nickname = "Nomignolo",
-	password = "Password",
-	nicknameOrEmail = "E-Mail o soprannome",
-	registrationDate = "Data di registrazione",
-	edit = "Modifica pubblicazione",
-	remove = "Elimina pubblicazione",
-	open = "Aprire",
-	clearCache = "Pulisci cache",
-	exit = "Logout",
-	changePassword = "Cambia password",
 	newPassword = "Nuova password",
-	singleSession = "Non e ' il mio computer.",
-	currentPassword = "Password attuale",
-	language = "Lingua delle descrizioni",
-	publications = "Pubblicazione",
+	nickname = "Soprannome",
+	nicknameOrEmail = "E-mail o soprannome",
+	no = "No",
+	noUpdates = "Non hai aggiornamenti",
 	notRegistered = "Non sei ancora registrato?",
-	createAccount = "Crea account",
-	registrationSuccessfull = "Controlla la tua cartella e-mail e spam per verificare il tuo account",
-
-	search = "Ricerca",
-	byPopularity = "Di popolarità",
-	byRating = "Per valutazione",
-	byDate = "Per data",
-	byName = "Per nome",
-	desc = "Discendente",
-	asc = "Ascendente",
-	publish = "Pubblica software",
-	install = "Installare",
-	installed = "Installare",
-	update = "Aggiornare",
-	page = "Pagina",
-	updateAll = "Aggiorna tutti",
-	noUpdates = "Non avete aggiornamenti",
-
-	changeReview = "Modifica revisione",
-	developer = "Sviluppatore",
-	version = "Versione",
-	license = "Licenza",
-	category = "Categoria",
-	updated = "Aggiornare",
-	reviews = "Recensione",
-	yourRating = "La tua valutazione",
-	writeReviewHere = "Tipo rivedere il testo qui",
-	choosePath = "Scegli tracciato",
-	reviewsOfUsers = "Recensioni degli utenti",
-	averageRating = "Giudizio medio",
-	writeReview = "Crea revisione",
-	dependencies = "Dipendenza",
-	wasReviewHelpful = "Questa recensione e ' stata utile?",
-	yes = "Sì",
-	no = "Non",
 	of = "di",
-	usersLoveReview = "gli utenti hanno trovato utile questa recensione",
+	open = "Aprire",
+	page = "Pagina",
+	password = "Parola d'ordine",
+	profile = "Profilo",
+	publicationName = "Nome della pubblicazione",
+	publications = "Pubblicazioni",
+	publish = "Pubblica software",
+	registrationDate = "Data di registrazione",
+	registrationSuccessfull = "Controlla la tua e-mail e la cartella spam per verificare il tuo account",
+	relativePath = "Percorso relativo",
+
+	remove = "Elimina pubblicazione",
+	reviews = "Recensioni",
+	reviewsOfUsers = "Recensioni degli utenti",
+	save = "Salva",
+	search = "Ricerca",
+	send = "Spedire",
+	settings = "Impostazioni",
+	singleSession = "Non è il mio computer",
+	statistics = "Statistiche",
+	statisticsMessagesCount = "I messaggi contano",
+	statisticsMostPopularUser = "Il piu 'attivo",
+	statisticsNewUser = "Nuovo utente",
+	statisticsPopularPublication = "(pubblicazione popolare)",
+	statisticsPublicationsCount = "Le pubblicazioni contano",
+
+	statisticsReviewsCount = "Le recensioni contano",
+	statisticsUsersCount = "Gli utenti contano",
 	thanksForVote = "Grazie per la tua opinione.",
+	toWho = "A chi:",
+	tree = "Albero di download dei file",
+	typeMessageText = "Digita il testo del messaggio",
+	typeUserName = "Digita il nome utente",
+	update = "Aggiornare",
+	updateAll = "Aggiorna tutto",
+	updated = "Aggiornato",
+	usersLoveReview = "gli utenti hanno trovato utile questa recensione",
+	version = "Versione",
+	wasReviewHelpful = "Questa recensione è stata utile?",
+	whatsNew = "Cosa c'è di nuovo",
+	whatsNewInVersion = "Cosa c'è di nuovo nella versione",
+	writeReview = "Crea recensione",
+	writeReviewHere = "Digita qui il testo della recensione",
+	yes = "sì",
+	yourRating = "Il tuo punteggio",
+	yourText = "Voi:",
 }
