--- a/Applications/App Market.app/Localizations/Russian.lang
+++ b/Applications/App Market.app/Localizations/Russian.lang
@@ -1,111 +1,111 @@
 {
-	statistics = "Статистика",
-	messages = "Сообщения",
-	account = "Аккаунт",
-	settings = "Настройки",
-	newMessage = "Написать сообщение",
-	newMessagePersonal = "Личное сообщение",
-	newMessageToDeveloper = "Написать сообщение",
-	dialogWith = "Диалог с ",
-	send = "Отправить",
-	toWho = "Кому:",
-	typeMessageText = "Введите текст сообщения",
-	typeUserName = "Введите имя пользователя",
-	yourText = "Вы:",
-	hereBeYourDialogs = "Здесь будут отображены ваши диалоги",
-
-	categoryOverview = "Главная",
-	categoryApplications = "Приложения",
-	categoryLibraries = "Библиотеки",
-	categoryScripts = "Скрипты",
-	categoryUpdates = "Обновления",
-
-	statisticsNewUser = "Новый пользователь",
-	statisticsMostPopularUser = "Наиболее активный",
-	statisticsUsersCount = "Число пользователей",
-	statisticsPublicationsCount = "Число публикаций",
-	statisticsReviewsCount = "Число отзывов",
-	statisticsPopularPublication = "(популярная публикация)",
-	statisticsMessagesCount = "Число сообщений",
-
-	whatsNew = "Что нового",
-	whatsNewInVersion = "Что нового в версии",
-	areYouSure = "Вы уверены, что хотите удалить публикацию?",
-	createShortcut = "Создать ярлык на рабочем столе",
-	editing = "Редактирование публикации",
-	publicationName = "Имя публикации",
-	mainFileURL = "URL главного файла",
-	mainFileName = "Имя главного файла",
-	iconURL = "URL иконки",
-	description = "Описание",
-	dependenciesAndResources = "Зависимоси и ресурсы",
-	save = "Сохранить",
-	cancel = "Отмена",
-	fileName = "Имя файла",
-	download = "Загрузить",
-	downloading = "Загрузка",
-	tree = "Древо загружаемых файлов",
+	account = "Счет",
+	add = "Добавлять",
 	addDependency = "Добавить зависимость",
-	existingPublication = "Существующая публикация",
-	fileByURL = "Файл по URL",
-	add = "Добавить",
-	relativePath = "Относительный путь",
-	localizationDependency = "Файл локализации",
-
-	login = "Авторизация",
-	profile = "Профиль",
-	nickname = "Никнейм",
-	password = "Пароль",
-	nicknameOrEmail = "E-Mail или никнейм",
-	registrationDate = "Дата регистрации",
-	edit = "Редактировать",
-	remove = "Удалить",
-	open = "Открыть",
-	clearCache = "Очистить кэш",
-	exit = "Выход",
-	changePassword = "Изменить пароль",
-	newPassword = "Новый пароль",
-	singleSession = "Это не мой компьютер",
-	currentPassword = "Текущий пароль",
-	language = "Язык описаний",
-	publications = "Публикации",
-	notRegistered = "Еще не зарегистрированы?",
-	createAccount = "Создать аккаунт",
-	registrationSuccessfull = "Проверьте свою почту и папку спама, чтобы подтвердить аккаунт",
-
-	search = "Поиск",
-	byPopularity = "По популярности",
-	byRating = "По рейтингу",
+	areYouSure = "Вы уверены, что хотите удалить публикацию?",
+	asc = "по возрастанию",
+	averageRating = "Средний рейтинг",
 	byDate = "По дате",
 	byName = "По имени",
-	desc = "По убыванию",
-	asc = "По возрастанию",
-	publish = "Опубликовать ПО",
-	install = "Установить",
-	installed = "Установлено",
-	update = "Обновить",
-	page = "Страница",
-	updateAll = "Обновить все",
-	noUpdates = "У вас самое новое ПО",
-
-	changeReview = "Изменить отзыв",
-	developer = "Разработчик",
-	version = "Версия",
-	license = "Лицензия",
+	byPopularity = "По популярности",
+	byRating = "По рейтингу",
+	cancel = "Отмена",
 	category = "Категория",
-	updated = "Обновлено",
-	reviews = "Отзывы",
-	yourRating = "Оцените приложение",
-	writeReviewHere = "Пишите отзыв здесь",
+	categoryApplications = "Приложения",
+	categoryLibraries = "Библиотеки",
+
+	categoryOverview = "Обзор",
+	categoryScripts = "Скрипты",
+	categoryUpdates = "Обновления",
+	changePassword = "Сменить пароль",
+	changeReview = "Изменить отзыв",
+
 	choosePath = "Выберите путь",
-	reviewsOfUsers = "Отзывы пользователей",
-	averageRating = "Средний рейтинг",
-	writeReview = "Оставить отзыв",
+	clearCache = "Очистить кэш",
+	createAccount = "Зарегистрироваться",
+	createShortcut = "Создать ярлык на рабочем столе",
+	currentPassword = "Текущий пароль",
 	dependencies = "Зависимости",
-	wasReviewHelpful = "Был ли этот отзыв полезен?",
-	yes = "Да",
+	dependenciesAndResources = "Зависимости и ресурсы",
+
+	desc = "По убыванию",
+	description = "Описание",
+	developer = "Разработчик",
+	dialogWith = "Разговор с",
+	download = "Скачать",
+	downloading = "Загрузка",
+	edit = "Изменить публикацию",
+	editing = "Изменить публикацию",
+	existingPublication = "Существующая публикация",
+	exit = "Выйти",
+	fileByURL = "Файл через URL",
+	fileName = "Имя файла",
+	hereBeYourDialogs = "Здесь будут ваши разговоры",
+	iconURL = "URL-адрес значка",
+	install = "Установить",
+	installed = "Установлены",
+	language = "Язык описаний",
+	license = "Лицензия",
+	localizationDependency = "Файл локализации",
+	login = "Авторизоваться",
+	mainFileName = "Имя основного файла",
+	mainFileURL = "URL основного файла",
+	messages = "Сообщения",
+
+	newMessage = "Новое сообщение",
+	newMessagePersonal = "Личное сообщение",
+	newMessageToDeveloper = "Отправить сообщение",
+	newPassword = "Новый пароль",
+	nickname = "Псевдоним",
+	nicknameOrEmail = "Электронная почта или псевдоним",
 	no = "Нет",
+	noUpdates = "У вас нет обновлений",
+	notRegistered = "Еще не зарегистрированы?",
 	of = "из",
-	usersLoveReview = "пользователей считают этот отзыв полезным",
+	open = "Открытым",
+	page = "Страница",
+	password = "Пароль",
+	profile = "Профиль",
+	publicationName = "Название публикации",
+	publications = "Публикации",
+	publish = "Публикация программного обеспечения",
+	registrationDate = "Дата регистрации",
+	registrationSuccessfull = "Проверьте свою электронную почту и папку со спамом, чтобы подтвердить свою учетную запись.",
+	relativePath = "Относительный путь",
+
+	remove = "Удалить публикацию",
+	reviews = "Отзывы",
+	reviewsOfUsers = "Отзывы пользователей",
+	save = "Сохранять",
+	search = "Поиск",
+	send = "Отправлять",
+	settings = "Настройки",
+	singleSession = "это не мой компьютер",
+	statistics = "Статистика",
+	statisticsMessagesCount = "Количество сообщений",
+	statisticsMostPopularUser = "Наиболее активны",
+	statisticsNewUser = "Новый пользователь",
+	statisticsPopularPublication = "(популярное издание)",
+	statisticsPublicationsCount = "Количество публикаций",
+
+	statisticsReviewsCount = "Количество отзывов",
+	statisticsUsersCount = "Количество пользователей",
 	thanksForVote = "Спасибо за ваше мнение.",
+	toWho = "Для кого:",
+	tree = "Дерево загрузки файлов",
+	typeMessageText = "Введите текст сообщения",
+	typeUserName = "Введите имя пользователя",
+	update = "Обновлять",
+	updateAll = "Обновить все",
+	updated = "Обновлено",
+	usersLoveReview = "пользователи нашли этот отзыв полезным",
+	version = "Версия",
+	wasReviewHelpful = "Был ли этот отзыв полезен?",
+	whatsNew = "Какие новости",
+	whatsNewInVersion = "Что нового в версии",
+	writeReview = "Создать отзыв",
+	writeReviewHere = "Введите текст отзыва здесь",
+	yes = "Да",
+	yourRating = "Ваш рейтинг",
+	yourText = "Ты:",
 }
