--- a/Applications/App Market.app/Localizations/Spanish.lang
+++ b/Applications/App Market.app/Localizations/Spanish.lang
@@ -1,111 +1,111 @@
 {
-	statistics = "Estadisticas",
-	messages = "Mensajes",
 	account = "Cuenta",
-	settings = "Ajustes",
+	add = "Agregar",
+	addDependency = "Agregar dependencia",
+	areYouSure = "¿Seguro que quieres eliminar la publicación?",
+	asc = "ascendente",
+	averageRating = "Puntuación media",
+	byDate = "Por fecha",
+	byName = "Por nombre",
+	byPopularity = "Por popularidad",
+	byRating = "Por calificación",
+	cancel = "Cancelar",
+	category = "Categoría",
+	categoryApplications = "Aplicaciones",
+	categoryLibraries = "bibliotecas",
+
+	categoryOverview = "Visión de conjunto",
+	categoryScripts = "Guiones",
+	categoryUpdates = "Actualizaciones",
+	changePassword = "Cambia la contraseña",
+	changeReview = "Cambiar revisión",
+
+	choosePath = "Seleccione la ruta",
+	clearCache = "Limpiar cache",
+	createAccount = "Crear una cuenta",
+	createShortcut = "Crear acceso directo del escritorio",
+	currentPassword = "Contraseña actual",
+	dependencies = "dependencias",
+	dependenciesAndResources = "Dependencias y recursos",
+
+	desc = "Descendente",
+	description = "Descripción",
+	developer = "Desarrollador",
+	dialogWith = "Conversación con",
+	download = "Descargar",
+	downloading = "Descargando",
+	edit = "Editar publicación",
+	editing = "Editar publicación",
+	existingPublication = "publicación existente",
+	exit = "Cerrar sesión",
+	fileByURL = "Archivo a través de URL",
+	fileName = "Nombre del archivo",
+	hereBeYourDialogs = "Aquí estarán sus conversaciones",
+	iconURL = "URL del icono",
+	install = "Instalar",
+	installed = "Instalado",
+	language = "Idioma de las descripciones",
+	license = "Licencia",
+	localizationDependency = "Archivo de localización",
+	login = "Iniciar sesión",
+	mainFileName = "Nombre del archivo principal",
+	mainFileURL = "URL del archivo principal",
+	messages = "Mensajes",
+
 	newMessage = "Nuevo mensaje",
 	newMessagePersonal = "Mensaje personal",
 	newMessageToDeveloper = "Enviar mensaje",
-	dialogWith = "Conversacion con ",
-	send = "Enviar",
-	toWho = "A quien:",
-	typeMessageText = "Pon texto del mensaje",
-	typeUserName = "Pon nombre de usuario",
-	yourText = "Tu:",
-	hereBeYourDialogs = "Aqui estaran tus conversaciones",
-
-	categoryOverview = "Vision General",
-	categoryApplications = "Aplicaciones",
-	categoryLibraries = "Librerias",
-	categoryScripts = "Scripts",
-	categoryUpdates = "Actualizaciones",
-
-	statisticsNewUser = "Nuevo usuario",
-	statisticsMostPopularUser = "Mas Activo",
-	statisticsUsersCount = "Recuento de usuarios",
-	statisticsPublicationsCount = "Recuento de publicaciones",
-	statisticsReviewsCount = "Recuento de valoraciones",
-	statisticsPopularPublication = "(publicacion popular)",
-	statisticsMessagesCount = "Recuento de mensajes",
-
-	whatsNew = "Que hay nuevo",
-	whatsNewInVersion = "Que hay nuevo en la version",
-	areYouSure = "Estas seguro que quieres eliminar la publicacion?",
-	createShortcut = "Crear Acceso Directo en el Escritorio",
-	editing = "Editar publicacion",
-	publicationName = "Nombre de la publicacion",
-	mainFileURL = "URL del archivo Main",
-	mainFileName = "Nombre del archivo Main",
-	iconURL = "URL del Icono",
-	description = "Descripcion",
-	dependenciesAndResources = "Dependencias y recursos",
-	save = "Guardad",
-	cancel = "Cancelar",
-	fileName = "Nombre de archivo",
-	download = "Descargar",
-	downloading = "Descargando",
-	tree = "Arbol de descarga de archivos",
-	addDependency = "Añadir dependencia",
-	existingPublication = "Publicacion existente",
-	fileByURL = "Archivo via URL",
-	add = "Añadir",
-	relativePath = "Ruta Relativa",
-	localizationDependency = "Archivo de localizacion",
-	
-	login = "Iniciar sesion",
-	profile = "Perfil",
-	nickname = "Apodo",
-	password = "Contraseña",
-	nicknameOrEmail = "Email o apodo",
-	registrationDate = "Fecha de registracion",
-	edit = "Editar publicacion",
-	remove = "Borrar publicacion",
-	open = "Abrir",
-	clearCache = "Borrar cache",
-	exit = "Cerrar sesion",
-	changePassword = "Change password",
 	newPassword = "Nueva contraseña",
-	singleSession = "No es mi ordenador",
-	currentPassword = "Contraseña actual",
-	language = "Idioma de las descripciones",
-	publications = "Publicaciones",
-	notRegistered = "No registrado todavia?",
-	createAccount = "Crear Cuenta",
-	registrationSuccessfull = "Checkea tu email y carpeta de spam para verificar tu cuenta",
-
-	search = "Buscar",
-	byPopularity = "Por Popularidad",
-	byRating = "Por Clasificacion",
-	byDate = "Por Fecha",
-	byName = "Por Nombre",
-	desc = "Descandente",
-	asc = "Ascendente",
-	publish = "Publicar Software",
-	install = "Instalar",
-	installed = "Instalado",
-	update = "Actualizar",
-	page = "Pagina",
-	updateAll = "Actualizar Todo",
-	noUpdates = "No tienes actualizaciones",
-
-	changeReview = "Cambiar valoracion",
-	developer = "Desarrollador",
-	version = "Version",
-	license = "Licencia",
-	category = "Categoria",
-	updated = "Actualizado",
-	reviews = "Valoraciones",
-	yourRating = "Tu valoracion",
-	writeReviewHere = "Pon la valoracion aqui",
-	choosePath = "Elegir Ruta",
-	reviewsOfUsers = "Valoracion de usuarios",
-	averageRating = "Valoracion promedio",
-	writeReview = "Crear valeracion",
-	dependencies = "Dependencias",
-	wasReviewHelpful = "Ha sido esta valoracion util?",
-	yes = "Si",
+	nickname = "Apodo",
+	nicknameOrEmail = "Correo electrónico o apodo",
 	no = "No",
+	noUpdates = "no tienes actualizaciones",
+	notRegistered = "Todavía no estas registrado?",
 	of = "de",
-	usersLoveReview = "Usuarios encontraron esta valoracion util",
-	thanksForVote = "Gracias por tu opinion.",
+	open = "Abierto",
+	page = "Página",
+	password = "Clave",
+	profile = "Perfil",
+	publicationName = "Nombre de publicación",
+	publications = "Publicaciones",
+	publish = "Publicar software",
+	registrationDate = "Fecha de registro",
+	registrationSuccessfull = "Revise su correo electrónico y carpeta de correo no deseado para verificar su cuenta",
+	relativePath = "Camino relativo",
+
+	remove = "Eliminar publicación",
+	reviews = "Reseñas",
+	reviewsOfUsers = "Reseñas de los usuarios",
+	save = "Guardar",
+	search = "Búsqueda",
+	send = "Enviar",
+	settings = "Ajustes",
+	singleSession = "no es mi computadora",
+	statistics = "Estadísticas",
+	statisticsMessagesCount = "Cuenta de mensajes",
+	statisticsMostPopularUser = "Mas activo",
+	statisticsNewUser = "Nuevo Usuario",
+	statisticsPopularPublication = "(publicación popular)",
+	statisticsPublicationsCount = "Cuenta de publicaciones",
+
+	statisticsReviewsCount = "Las reseñas cuentan",
+	statisticsUsersCount = "Los usuarios cuentan",
+	thanksForVote = "Gracias por su opinión.",
+	toWho = "A quién:",
+	tree = "Árbol de descarga de archivos",
+	typeMessageText = "Escriba el texto del mensaje",
+	typeUserName = "Escriba el nombre de usuario",
+	update = "Actualizar",
+	updateAll = "Actualizar todo",
+	updated = "Actualizado",
+	usersLoveReview = "los usuarios encontraron útil esta reseña",
+	version = "Versión",
+	wasReviewHelpful = "Fue este repaso útil?",
+	whatsNew = "Qué hay de nuevo",
+	whatsNewInVersion = "¿Qué hay de nuevo en la versión",
+	writeReview = "Crear reseña",
+	writeReviewHere = "Escriba el texto de revisión aquí",
+	yes = "Sí",
+	yourRating = "Tu clasificación",
+	yourText = "Tú:",
 }
