--- a/Applications/App Market.app/Localizations/Ukrainian.lang
+++ b/Applications/App Market.app/Localizations/Ukrainian.lang
@@ -1,111 +1,111 @@
 {
-	statistics = "Статистика",
-	messages = "Повідомлення",
-	account = "Аккаунт",
-	settings = "Налаштування",
-	newMessage = "Написати повідомлення",
-	newMessagePersonal = "Особисте повідомлення",
-	newMessageToDeveloper = "Написати повідомлення",
-	dialogWith = "Діалог з ",
-	send = "Відправити",
-	toWho = "Кому:",
-	typeMessageText = "Введіть текст повідомлення",
-	typeUserName = "Введіть ім'я користувача",
-	yourText = "Ви:",
-	hereBeYourDialogs = "Тут будуть відображені ваші діалоги",
-	
-	categoryOverview = "Головна",
-	categoryApplications = "Додатки",
-	categoryLibraries = "Бібліотеки",
-	categoryScripts = "Скрипти",
-	categoryUpdates = "Оновлення",
-
-	statisticsNewUser = "Новий користувач",
-	statisticsMostPopularUser = "Найбільш активний",
-	statisticsUsersCount = "Число користувачів",
-	statisticsPublicationsCount = "Число публікацій",
-	statisticsReviewsCount = "Число відгуків",
-	statisticsPopularPublication = "(Популярна публікація)",
-	statisticsMessagesCount = "Число повідомлень",
-	
-	whatsNew = "Що нового",
-	whatsNewInVersion = "Що нового у версії",
-	areYouSure = "Ви впевнені, що хочете видалити публікацію?",
-	createShortcut = "Створити ярлик на робочому столі",
-	editing = "Редагування публікації",
-	publicationName = "Ім'я публікації",
-	mainFileURL = "URL головного файлу",
-	mainFileName = "Ім'я головного файлу",
-	iconURL = "URL іконки",
-	description = "Опис",
-	dependenciesAndResources = "Залежності і ресурси",
-	save = "Зберегти",
-	cancel = "Відміна",
-	fileName = "Ім'я файлу",
-	download = "Завантажити",
-	downloading = "Завантаження",
-	tree = "Древо завантаження",
-	addDependency = "Додати залежність",
-	existingPublication = "Існуюча публікація",
-	fileByURL = "Файл по URL",
+	account = "Рахунок",
 	add = "Додати",
-	relativePath = "Відносний шлях",
-	localizationDependency = "Файл локалізації",
-
-	login = "Авторизація",
-	profile = "Профіль",
-	nickname = "Нікнейм",
-	password = "Пароль",
-	nicknameOrEmail = "E-Mail або нікнейм",
-	registrationDate = "Дата реєстрації",
-	edit = "Редагувати",
-	remove = "Видалити",
-	open = "Відкрити",
-	clearCache = "Очистити кеш",
-	exit = "Вихід",
-	changePassword = "Змінити пароль",
-	newPassword = "Новий пароль",
-	singleSession = "Це не мій комп'ютер",
-	currentPassword = "Поточний пароль",
-	language = "Мова описів",
-	publications = "Публікації",
-	notRegistered = "Ще не зареєстровані?",
-	createAccount = "Створити акаунт",
-	registrationSuccessfull = "Перевірте свою пошту і папку спаму, щоб підтвердити аккаунт",
-
-	search = "Пошук",
+	addDependency = "Додати залежність",
+	areYouSure = "Ви впевнені, що хочете видалити публікацію?",
+	asc = "Висхідна",
+	averageRating = "Середня оцінка",
+	byDate = "За датою",
+	byName = "По імені",
 	byPopularity = "За популярністю",
 	byRating = "За рейтингом",
-	byDate = "По даті",
-	byName = "По імені",
-	desc = "За зменшенням",
-	asc = "За зростанням",
-	publish = "Опублікувати ПО",
+	cancel = "Скасувати",
+	category = "Категорія",
+	categoryApplications = "Додатки",
+	categoryLibraries = "Бібліотеки",
+
+	categoryOverview = "Огляд",
+	categoryScripts = "Скрипти",
+	categoryUpdates = "Оновлення",
+	changePassword = "Змінити пароль",
+	changeReview = "Змінити огляд",
+
+	choosePath = "Виберіть шлях",
+	clearCache = "Очистити кеш",
+	createAccount = "Створити обліковий запис",
+	createShortcut = "Створити ярлик на робочому столі",
+	currentPassword = "Поточний пароль",
+	dependencies = "Залежності",
+	dependenciesAndResources = "Залежності та ресурси",
+
+	desc = "Спадаючий",
+	description = "Опис",
+	developer = "Розробник",
+	dialogWith = "Розмова з",
+	download = "Завантажити",
+	downloading = "Завантаження",
+	edit = "Редагувати публікацію",
+	editing = "Редагувати публікацію",
+	existingPublication = "Існуюча публікація",
+	exit = "Вийти",
+	fileByURL = "Файл через URL-адресу",
+	fileName = "Ім'я файлу",
+	hereBeYourDialogs = "Тут будуть ваші розмови",
+	iconURL = "URL-адреса значка",
 	install = "Встановити",
 	installed = "Встановлено",
-	update = "Оновити",
-	page = "Сторінка",
-	updateAll = "Оновити всі",
-	noUpdates = "У вас найновіше ПЗ",
-
-	changeReview = "Змінити відгук",
-	developer = "Розробник",
-	version = "Версія",
+	language = "Мова описів",
 	license = "Ліцензія",
-	category = "Категорія",
-	updated = "Оновлено",
-	reviews = "Відгуки",
-	yourRating = "Оцініть додаток",
-	writeReviewHere = "Пишіть відгук тут",
-	choosePath = "Виберіть шлях",
-	reviewsOfUsers = "Відгуки користувачів",
-	averageRating = "Середній рейтинг",
-	writeReview = "Залишити відгук",
-	dependencies = "Залежності",
-	wasReviewHelpful = "Чи був цей відгук корисним?",
-	yes = "Так",
+	localizationDependency = "Файл локалізації",
+	login = "Увійти",
+	mainFileName = "Основна назва файлу",
+	mainFileURL = "URL-адреса основного файлу",
+	messages = "Повідомлення",
+
+	newMessage = "Нове повідомлення",
+	newMessagePersonal = "Особисте повідомлення",
+	newMessageToDeveloper = "Відправити повідомлення",
+	newPassword = "Новий пароль",
+	nickname = "Псевдонім",
+	nicknameOrEmail = "Електронна пошта або псевдонім",
 	no = "Ні",
+	noUpdates = "У вас немає оновлень",
+	notRegistered = "Ще не зареєстровані?",
 	of = "з",
-	usersLoveReview = "користувачів вважають цей відгук корисним",
-	thanksForVote = "Дякую за вашу думку",
+	open = "ВІДЧИНЕНО",
+	page = "Сторінка",
+	password = "Пароль",
+	profile = "Профіль",
+	publicationName = "Назва видання",
+	publications = "Публікації",
+	publish = "Публікуйте програмне забезпечення",
+	registrationDate = "Дата реєстрації",
+	registrationSuccessfull = "Перевірте свою електронну пошту та папку зі спамом, щоб підтвердити свій обліковий запис",
+	relativePath = "Відносний шлях",
+
+	remove = "Видалити публікацію",
+	reviews = "Відгуки",
+	reviewsOfUsers = "Відгуки користувачів",
+	save = "Зберегти",
+	search = "Пошук",
+	send = "Надіслати",
+	settings = "Налаштування",
+	singleSession = "Це не мій комп'ютер",
+	statistics = "Статистика",
+	statisticsMessagesCount = "Кількість повідомлень",
+	statisticsMostPopularUser = "Найактивніший",
+	statisticsNewUser = "Новий користувач",
+	statisticsPopularPublication = "(популярне видання)",
+	statisticsPublicationsCount = "Підрахунок публікацій",
+
+	statisticsReviewsCount = "Відгуки враховуються",
+	statisticsUsersCount = "Кількість користувачів",
+	thanksForVote = "Дякую за вашу думку.",
+	toWho = "Кому:",
+	tree = "Дерево завантаження файлів",
+	typeMessageText = "Введіть текст повідомлення",
+	typeUserName = "Введіть ім'я користувача",
+	update = "Оновлення",
+	updateAll = "Оновити все",
+	updated = "Оновлено",
+	usersLoveReview = "користувачі вважають цей огляд корисним",
+	version = "Версія",
+	wasReviewHelpful = "Чи був цей огляд корисним?",
+	whatsNew = "Що нового",
+	whatsNewInVersion = "Що нового у версії",
+	writeReview = "Створити огляд",
+	writeReviewHere = "Введіть текст огляду тут",
+	yes = "Так",
+	yourRating = "Ваш рейтинг",
+	yourText = "Ви:",
 }
