--- a/Applications/MineCode IDE.app/Localizations/Chinese.lang
+++ b/Applications/MineCode IDE.app/Localizations/Chinese.lang
@@ -1,68 +1,68 @@
-  {
-	toggleSyntaxHighlight = "切换语法高亮",
-	toggleAutocompletion = "切换自动补全",
-	toggleAutoBrackets = "切换自动括号",
-	toUpperCase = "转大写",
-	toLowerCase = "转小写",
-	convertCase = "反转大小写",
-	openingFile = "打开中",
-	arguments = "通过逗号分隔参数",
-	launchWithArguments = "使用...参数运行",	
-	addBreakpoint = "添加断点",
-	clearBreakpoints = "清除断点",
-	finishDebug = "停止",
-	continueDebug = "继续",
-	gotoLine = "转到...行",
-	lineNumber = "行",
-	selectAndPasteColor = "选择和粘贴颜色",
-	url = "https://github.com/kebufu",
-	getFromWeb = "从URL打开",
-	downloading = "下载中...",
-	debugging = "在此行调试",
-	runtimeError = "运行错误",
-	variablesNotAvailable = "没有找到变量",
-	variables = "变量的值:",
-	pathToFile = "文件的位置",
-	selectWord = "选择目前的字",
-	gotoCyka = "转到",
-	gotoEnd = "滚动到底部",
-	gotoStart = "滚到顶部",
-	pageDown = "下一页",
-	pageUp = "上一页",
-	deleteLine = "删除此行",
-	cursorProperties = "光标属性",
-	cursorSymbol = "符号",
-	cursorColor = "颜色",
-	cursorBlinkDelay = "闪烁延迟",
-	selection = "选择: ",
-	none = "无",
-	properties = "属性",
+{
 	about = "关于",
-	quit = "退出MineCode",
-	line = " 行",
-	symbol = " 符号",
-	lines = " 行, ",
-	symbols = " 符号",
+	addBreakpoint = "添加断点",
+	arguments = "用逗号分隔参数",
+	clearBreakpoints = "清除断点",
+	color = "颜色",
+	colorScheme = "配色方案",
+	comment = "切换评论",
+	continueDebug = "继续",
+	convertCase = "转换案例",
+	copy = "复制",
+	cursor = "光标：",
+	cursorBlinkDelay = "闪烁延迟",
+	cursorColor = "颜色",
+	cursorProperties = "光标属性",
+	cursorSymbol = "象征",
+	cut = "切",
+	debugging = "调试器上线",
+	deleteLine = "删除当前行",
+	downloading = "正在下载文件...",
+	edit = "编辑",
 	file = "文件",
-	cursor = "光标: ",
-	new = "新建",
+	find = "寻找",
+	findSomeShit = "让我们找到一些狗屎...",
+	finishDebug = "停止",
+	flashEEPROM = "闪存到 EEPROM",
+	flashingEEPROM = "正在闪烁。",
+	getFromWeb = "从 URL 打开",
+	gotoCyka = "去",
+	gotoEnd = "滚动到结尾",
+	gotoLine = "转到线",
+	gotoStart = "滚动开始",
+	indent = "缩进",
+	launchWithArguments = "带参数运行",
+	line = "线，",
+	lineNumber = "线",
+	lines = "线条，",
+	new = "新的",
+	none = "没有任何",
 	open = "打开",
 	openFile = "打开文件",
-	save = "保存",
-	saveAs = "另存为",
-	colorScheme = "颜色主题",
-	color = "颜色",
-	toggleTopToolBar = "切换顶部工具栏",
-	find = "找到",
-	findSomeShit = "让我们来找几坨屎（原文如此）",
-	cut = "剪切",
-	copy = "复制",
+	openingFile = "开幕式",
+	pageDown = "向下翻页",
+	pageUp = "向上翻页",
 	paste = "粘贴",
+	pathToFile = "文件路径",
+	properties = "特性",
+	quit = "退出 MineCode",
+	runtimeError = "运行时错误",
+	save = "节省",
+	saveAs = "另存为",
 	selectAll = "全选",
-	edit = "编辑",
-	comment = "切换注释",
-	indent = "缩进",
-	unindent = "取消缩进",
-	flashEEPROM = "烧录到EEPROM",
-	flashingEEPROM = "烧录中。 请不要关闭计算机。",
+	selectAndPasteColor = "选择并粘贴颜色",
+	selectWord = "选择当前单词",
+	selection = "选择：",
+	symbol = "象征",
+	symbols = "符号",
+	toLowerCase = "降低",
+	toUpperCase = "到上",
+	toggleAutoBrackets = "切换自动括号",
+	toggleAutocompletion = "切换自动完成",
+	toggleSyntaxHighlight = "切换语法高亮",
+	toggleTopToolBar = "切换顶部工具栏",
+	unindent = "缩进",
+	url = "http://example.com/something.lua",
+	variables = "变量的值：",
+	variablesNotAvailable = "未找到变量",
 }
